--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9KN-lW-zr9"/>
+                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tKK-Eu-ffa"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gS6-Sa-7VA" userLabel="Yes button">
@@ -103,7 +103,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1lZ-0d-7or"/>
+                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v6n-dC-UhS"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -132,10 +132,8 @@
                         <outlet property="buttonsStackView" destination="zsM-tV-wFE" id="2yl-6W-r2f"/>
                         <outlet property="counterOfQuestionLabel" destination="doN-j3-7Nb" id="pRq-So-PHq"/>
                         <outlet property="downloadContentActivity" destination="eNp-Pm-0hr" id="g6z-Sb-cvu"/>
-                        <outlet property="noButton" destination="gBu-xy-Njy" id="ylh-bw-tLB"/>
                         <outlet property="previewOfPosterImageView" destination="BxE-Kf-zIe" id="yIX-RO-jkp"/>
                         <outlet property="questionLabel" destination="OVn-Ix-A2O" id="gMJ-1d-sbW"/>
-                        <outlet property="yesButton" destination="gS6-Sa-7VA" id="d8v-h2-y0h"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
